<resources>
    <string name="app_name">My Application</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>
    <string name="stop">停止</string>
    <string name="switch_mode">切换模式</string>
    <string name="next">下一首</string>
    <string name="prev">上一首</string>
    <string name="add">添加歌曲</string>
    <string name="delete">删除歌曲</string>
    <string name="cover_art_description">Album cover art</string>
<!--    <string name="next">下一首</string>-->
</resources>