<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


<!-- 播放状态显示 -->
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="8dp"
        android:text="等待播放..."
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_switch_mode"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/switch_mode"
            app:icon="@drawable/ic_switch_mode"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/teal_700"
            app:strokeWidth="0dp" />

        <TextView
            android:id="@+id/tv_play_mode"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="播放模式: 列表循环"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <!-- 更多操作菜单 -->

        <!-- 上一首 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_song"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/delete"
            app:icon="@drawable/ic_delete_song"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@color/teal_700"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_prev"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/prev"
            app:icon="@drawable/ic_skip_previous"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/play"
            app:icon="@drawable/ic_play_song"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pause"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/pause"
            app:icon="@drawable/ic_pause_song"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/stop"
            app:icon="@drawable/ic_stop"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/next"
            app:icon="@drawable/ic_play_next"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>

    </LinearLayout>

    <!-- 进度条 -->
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <!-- 当前播放的文件名 -->
    <TextView
        android:id="@+id/tv_current_song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="未选择文件"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_song"
            style="@style/IconOnlyButton"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:contentDescription="@string/add"
            app:icon="@drawable/ic_add_song"
            app:iconTint="@color/teal_700"
            app:iconSize="@dimen/icon_size"
            app:strokeWidth="0dp"/>
        <TextView
            android:id="@+id/tv_current_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1" />

    </LinearLayout>
    <!-- 歌曲列表 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/song_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="8dp" />
</LinearLayout>
